sandbox/output
StingCalculatorTest.java:17: error: cannot find symbol
        AssertEqual(result, 3);
        ^
  symbol:   method AssertEqual(int,int)
  location: class StingCalculatorTest
1 error
